# BrilliantNetwork

./: .gitignore  BrilliantClientServer.sln  LICENSE
BrilliantClientServer/: BrilliantClientServer.vcxproj  BrilliantClientServer.vcxproj.filters
BrilliantClientServer/include/: BrilliantClient.h  BrilliantServer.h
BrilliantClientServer/include/brilliant/: Common.h  Connection.h  GeneralConcepts.h  Message.h  Queue.h
BrilliantClientServer/include/detail/: Common.h  Connection.h  GeneralConcepts.h  (+2 more)
BrilliantNetwork/: BrilliantNetwork.vcxproj  BrilliantNetwork.vcxproj.filters  Client.h  HasType.h  Server.h  SocketTraits.h  Ssl.h  main.cpp
TestClient/: TestClient.cpp  TestClient.h  TestClient.vcxproj  TestClient.vcxproj.filters
TestCommon/: TestCommon.vcxproj  TestCommon.vcxproj.filters  TestMsg.h
TestServer/: TestServer.cpp  TestServer.h  TestServer.vcxproj  TestServer.vcxproj.filters
examples/AwaitableClientAndServer/: AwaitableClientAndServer.vcxproj  CMakeLists.txt  HttpExample.cpp  HttpExample.h  HttpsExample.cpp  HttpsExample.h  SslExample.cpp  SslExample.h  TcpExample.cpp  TcpExample.h  UdpExample.cpp  UdpExample.h  main.cpp  private.pem  public.pem
examples/ClientAndServer/: ClientAndServer.vcxproj  main.cpp
include/: BrilliantNetwork.h
include/brilliant/: Acceptor.h  AsioIncludes.h  AwaitableClient.h  AwaitableConnection.h  AwaitableConnectionInterface.h  AwaitableServer.h  BasicHttpProtocol.h  BasicProtocol.h  Client.h  Connection.h  ConnectionInterface.h  ConnectionProcess.h  EndpointHelper.h  Server.h  ServerProcess.h  SocketTraits.h  Ssl.h
